@@ -3,6 +3,7 @@ Changes for 2.5.1
 New features:
 
 Bug fixes:
+..F....... [ZBX-9809] fixed action operation validation (Gunars)
 ........S. [ZBX-9814] fixed function prototype declaration created in ZBXNEXT-2760 (wiper)
 ...G...... [ZBX-9716] fixed possible event record number wraparound issues in the old Windows Eventing support (wiper)
 ...G...... [ZBX-9258] fixed Alias for log[], logrt[] and eventlog[] (gleb)
@@ -112,6 +113,7 @@ New features:
 A.F....... [ZBX-1357] updated Czech translation; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+..F....... [ZBX-9809] fixed action operation validation (Gunars)
 ...G...... [ZBX-9716] fixed possible event record number wraparound issues in the old Windows Eventing support (wiper)
 ...G...... [ZBX-9258] fixed Alias for log[], logrt[] and eventlog[] (gleb)
 .......PS. [ZBX-4284] improved handling of timeouting items on reachable hosts (wiper)
@@ -771,6 +773,7 @@ New features:
 A.F....... [ZBX-1357] updated Czech translation; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+..F....... [ZBX-9809] fixed action operation validation (Gunars)
 ...G...... [ZBX-9716] fixed possible event record number wraparound issues in the old Windows Eventing support (wiper)
 .......PS. [ZBX-4284] improved handling of timeouting items on reachable hosts (wiper)
 ...G...... [ZBX-9721] fixed agent log message for log[] item in case of log records longer than 256kB (gleb)
@@ -2058,6 +2061,7 @@ New features:
 A.F....... [ZBX-1357] updated Czech translation; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+..F....... [ZBX-9809] fixed action operation validation (Gunars)
 ...G...... [ZBX-9721] fixed agent log message for log[] item in case of log records longer than 256kB (gleb)
 ....I....T [ZBX-8989] moved Total memory item from Filesystems to Memory application in Template OS Windows (gleb)
 
